--- a/tes.html
+++ b/tes.html
@@ -1,1 +1,1 @@
-<iframe src="http://clossss.blogspot.com"></iframe>
+<iframe src="https://closessss.blogspot.com/" height="200" width="300"></iframe>
